--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -56,6 +56,15 @@
 					
 					<div class="ref-tooltip-grid">
 
+						<div class="ref-tooltip-container twice">
+							<img src="media/klienti/Garrett-twice-logo.png" alt="Garrett logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text" style="width: 70%;">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>konštrukcia turbodúchadiel</p>
+								<p class="ref-tooltip-company">Garrett</p>
+							</div>
+						</div>
+
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
@@ -74,12 +83,30 @@
 							</div>
 						</div>
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>vývoj automobilových komponentov</p>
 								<div class="ref-tooltip-company">EDAG</div>
+							</div>
+						</div> -->
+
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>robotické systémy</p>
+								<div class="ref-tooltip-company">KUKA</div>
+								</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>CAD development design</p>
+								<div class="ref-tooltip-company">Chropynska</div>
 							</div>
 						</div>
 
@@ -118,14 +145,14 @@
 							</div>
 						</div>
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>automobilový priemysel</p>
 								<div class="ref-tooltip-company">Mercedes-Benz</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-tooltip-image" />
@@ -173,7 +200,7 @@
 
 						<div class="ref-tooltip-container">
 							<div class="ref-tooltip-img-wrapper" role="img" aria-label="Skoda logo" 
-								style="background: url('media/klienti/SKODA_LOGO.png') center/cover no-repeat;" >
+								style="background: url('media/klienti/skoda-logo-enitech.png') center/cover no-repeat;" >
 							</div>
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
@@ -182,7 +209,7 @@
 							</div>
 						</div>
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<div class="ref-tooltip-img-wrapper" role="img" aria-label="CMS logo" 
 								style="background: url('media/klienti/CMS_logo_mini.png') center/cover no-repeat;" >
 							</div>
@@ -191,16 +218,16 @@
 								<p>Automatizované výrobné linky pre automobilky</p>
 								<div class="ref-tooltip-company">CMS</div>
 							</div>
-						</div>
+						</div> -->
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/OTHUA_LOGO.png" alt="Othua logo" class="ref-tooltip-image"/>
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>Automatizované výrobné linky pre automobilky</p>
 								<div class="ref-tooltip-company">Othua</div>
 							</div>
-						</div>
+						</div> -->
 
 					</div>
 					<div class="ref-flex-link-to-menu">
