--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -55,7 +55,7 @@
 							<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p></p><strong lang-code="07005">Realizované služby:</strong></p>
-								<p>interiérové komponenty lietadiel</p>
+								<p>interiérové komponenty lietadiel, montážne plošiny</p>
 								<div class="ref-tooltip-company">AIRBUS</div>
 							</div>
 						</div>
@@ -81,13 +81,31 @@
 						</div>
 
 						<div class="ref-tooltip-container">
+							<img src="media/klienti/Diehl-logo.png" alt="Diehl logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>interiérové komponenty lietadiel</p>
+								<div class="ref-tooltip-company">Diehl</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/LufthansaTechnik-logo.png" alt="Lufthansa logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>manipulačné prípravky</p>
+								<div class="ref-tooltip-company">Lufthansa Technik</div>
+							</div>
+						</div>
+
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>aerospace</p>
 								<div class="ref-tooltip-company">Honeywell</div>
 							</div>
-						</div>
+						</div> -->
 
 					</div>
 					<div class="ref-flex-link-to-menu">
