--- a/Block_Ref3.html
+++ b/Block_Ref3.html
@@ -85,32 +85,32 @@
 							</div>
 						</div>
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>turbodúchadlá</p>
 								<div class="ref-tooltip-company">Honeywell</div>
 							</div>
-						</div>
+						</div> -->
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>CAD development design</p>
 								<div class="ref-tooltip-company">Chropynska</div>
 							</div>
-						</div>
+						</div> -->
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>výrobné zariadenia pre gumárenský priemysel</p>
 								<div class="ref-tooltip-company">KONŠTRUKTA</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo" class="ref-tooltip-image" />
@@ -121,14 +121,14 @@
 							</div>
 						</div>
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>steel structures and plant engineering</p>
 								<div class="ref-tooltip-company">MCE part of the family HABAU GROUP</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo" class="ref-tooltip-image" />
@@ -139,23 +139,23 @@
 							</div>
 						</div>
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>zváracie a polohovacie prípravky</p>
 								<div class="ref-tooltip-company">Škoda Auto</div>
 							</div>
-						</div>
+						</div> -->
 
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 							<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-tooltip-image" />
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>Poradenstvo a technológie</p>
 								<div class="ref-tooltip-company">Tagueri</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/KELVION_LOGO_CRM.avif" alt="Kevion logo" class="ref-tooltip-image" />
@@ -187,14 +187,14 @@
 							</div>
 						</div>
 						
-						<div class="ref-tooltip-container">
+						<!-- <div class="ref-tooltip-container">
 								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-tooltip-image" />
 								<div class="ref-tooltip-text">
 									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>robotické systémy</p>
 								<div class="ref-tooltip-company">KUKA</div>
 								</div>
-						</div>
+						</div> -->
 						
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/AllianceLoundrySystems_logo_transp.png" alt="ALLIANCE LAUNDRY logo" class="ref-tooltip-image" />
