--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -33,7 +33,7 @@
 					<div id="id-kontakt1-animate-content"> <!-- style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);"> -->
 						<h1 lang-code="05001">Kontaktujte nás</h1>
 						<p lang-code="05002">
-							NAPÍŠTE NÁM V PRÍPADE OTÁZOK ALEBO NÁM DAJTE SPÄTNÚ VÄZBU NA NAŠE PRODUKTY.
+							NAPÍŠTE NÁM V PRÍPADE OTÁZOK ALEBO NÁM DAJTE SPÄTNÚ VÄZBU NA NAŠE SLUŽBY.
 							VYPLŇTE FORMULÁR A MY VÁM ODPOVIEME ČO NAJSKÔR.
 						</p>
 					</div>
