--- a/Block_Onas1.html
+++ b/Block_Onas1.html
@@ -44,8 +44,8 @@
 					<p lang-code="00202">.Patríme medzi najväčšie inžinierske kancelárie na Slovensku s viac ako 80 špecialistami.</p>
 					<p lang-code="00203">.Naše podnikanie sme začali v oblasti leteckého priemyslu. V priebehu rokov sme rozšírili svoje aktivity aj na automobilový priemysel a
 						všeobecné strojárstvo.</p>
-					<p lang-code="00204">.V oblasti IT poskytujeme komplexné IT služby pre zákazníkov z Nemecka, Rakúska a Českej republiky v oblastiach ako telekomunikácie,
-						bankovníctva/poisťovníctva, verejnej správy a tiež v oblasti priemyslu.</p>
+					<p lang-code="00204">.V oblasti IT poskytujeme komplexné IT služby, ako pre domácich taka aj pre zahraničných zákazníkov, 
+						v oblastiach telekomunikácie, bankovníctva/poisťovníctva, verejnej správy a tiež v oblasti priemyslu.</p>
 				</div>
 			</div>
 		</div>
