--- a/Block_IT4.html
+++ b/Block_IT4.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="it3.css">
-	<link rel="stylesheet" href="it4.css"> <!-- Vacsinu kopiruje z it3.css -->
+	<link rel="stylesheet" href="it.css">
+	<!-- <link rel="stylesheet" href="it4.css"> -->
 	<style>
 	</style>
 	<script src="Language.js" defer></script>
@@ -19,43 +19,43 @@
 
 <body>
 	<div id="IT4-div-src"> 
-		<div class="it4-body" id="id-IT4-odbornost" style="scroll-margin-top: 80px;"> <!-- modrocierne pozadie -->
-			<div class="it3-line"></div>
-			<div class="it3-heading-back-row">
+		<div class="it-body color-variant-it4" id="id-IT4-odbornost" style="scroll-margin-top: 80px;"> <!-- modrocierne pozadie -->
+			<div class="it-line"></div>
+			<div class="it-heading-back-row">
 				<!-- <h3 lang-code="02041">.ODBORNOSŤ</h3> -->
 				<h1 lang-code="02042">.Naša odbornosť</h1>
 				<a href="#id-IT2-odbornost-back" style="color: #ACF;" lang-code="02060">Späť k menu</a>
 			</div>
-			<div class="it3-grid">
-				<div class="it3-grid-item-pic p1">
+			<div class="it-grid">
+				<div class="it-grid-item-pic p1">
 					<img src="media/Blondina-s-papierom.avif" alt="Obrázok P1" />
 				</div>
-				<div class="it3-grid-item-txt t1">
+				<div class="it-grid-item-txt t1">
 					<h2 lang-code="02043">.Rôznorodá škála zručností</h2>
-					<div class="it3-grid-item-line"></div>
+					<div class="it-grid-item-line"></div>
 					<p lang-code="02044">.Zoznámte sa s naším tímom vysoko kvalifikovaných IT profesionálov s odbornými znalosťami v širokej škále technológií a odvetví. So širokým spektrom odborných
 						znalostí sme dobre vybavení na poskytovanie riešení prispôsobených špecifickým požiadavkám vášho odvetvia.</p>
 				</div>
-				<div class="it3-grid-item-txt t2">
+				<div class="it-grid-item-txt t2">
 					<h2 lang-code="02045">.Agilná metodológia</h2>
-					<div class="it3-grid-item-line"></div>
+					<div class="it-grid-item-line"></div>
 					<p lang-code="02046">.Zistite, ako náš agilný prístup k vývoju zaisťuje flexibilitu a prispôsobivosť, aby ste splnili požiadavky vašich vyvíjajúcich sa projektov. Ako naše
 						inovatívne riešenie problémov z nás robia ideálneho partnera na riešenie výziev vo vašom konkrétnom odvetví.</p>
 				</div>
-				<div class="it3-grid-item-pic p2">
+				<div class="it-grid-item-pic p2">
 					<img src="media/PichBielouTuskouDoObrazovky.avif" alt="Obrázok P2" />
 				</div>
-				<div class="it3-grid-item-pic p3">
+				<div class="it-grid-item-pic p3">
 					<img src="media/Neoholeny-ZelenyText.avif" alt="Obrázok P3" />
 				</div>
-				<div class="it3-grid-item-txt t3">
+				<div class="it-grid-item-txt t3">
 					<h2 lang-code="02047">.Bezpečnosť údajov</h2>
-					<div class="it3-grid-item-line"></div>
+					<div class="it-grid-item-line"></div>
 					<p lang-code="02048">.Pochopte náš záväzok týkajúci sa bezpečnosti údajov a dodržiavania predpisov, aby ste zabezpečili ochranu vašich citlivých informácií. Uisťujeme vás, že naša
 						oddanosť dodržiavaniu najvyšších štandardov ochrany údajov vám poskytne potrebnú bezpečnosť pre úspešné a spoľahlivé partnerstvo.</p>
 				</div>
 			</div>
-			<div class="it3-more-info-container">
+			<div class="it-more-info-container">
 				<a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" lang-code="02049" class="animate-text-underline" style="
                 --text-color: #a8cfff;
                 --hover-color: #ffffff;
@@ -77,8 +77,8 @@
 			await loadAllTranslations();
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
-			Animator.registerAll(".it3-line", "animate-width-grow");
-			Animator.registerAll(".it3-grid-item-line", "animate-width-grow");
+			Animator.registerAll(".it-line", "animate-width-grow");
+			Animator.registerAll(".it-grid-item-line", "animate-width-grow");
 			document.body.style.visibility = "visible";
 		});
 	</script>
