--- a/Block_IT5.html
+++ b/Block_IT5.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="it3.css"> <!-- rovnake style -->
-	<link rel="stylesheet" href="it5.css"> <!-- odlisnosti -->
+	<link rel="stylesheet" href="it.css"> <!-- rovnake style -->
+	<!-- <link rel="stylesheet" href="it5.css"> -->
 
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
@@ -19,44 +19,48 @@
 
 <body>
 	<div id="IT5-div-src">
-		<div class="it5-body" id="id-IT5-it-riesenia" style="scroll-margin-top: 80px;">
-			<div class="it3-line"></div>
-			<div class="it3-heading-back-row">
+		<div class="it-body color-variant-it5" id="id-IT5-it-riesenia" style="scroll-margin-top: 80px;">
+			<div class="it-line"></div>
+			<div class="it-heading-back-row">
 				<!-- <h3 lang-code="02051">.IT RIEŠENIA</h3> -->
 				<h1 lang-code="02052">.IT riešenia na mieru</h1>
 				<a href="#id-IT2-it-riesenia-back" style="color: #ACF;" lang-code="02060">Späť k menu</a>
 			</div>
-			<div class="it3-grid">
-				<div class="it3-grid-item-pic p1">
+			<div class="it-grid">
+				<div class="it-grid-item-pic p1">
 					<img src="media/Copilot_DvajaNadNotebookom.avif" alt="Obrázok P1" />
 				</div>
-				<div class="it3-grid-item-txt t1">
+				<div class="it-grid-item-txt t1">
 					<h2 lang-code="02053">.Zákazkový vývoj</h2>
-					<div class="it3-grid-item-line"></div>
+					<div class="it-grid-item-line"></div>
 					<p lang-code="02054">.Preskúmajte naše vlastné IT riešenia prispôsobené vašim špecifickým obchodným výzvam a cieľom. Prečo od spolupráce s nami môžete očakávať inovatívne stratégie
 						založené na výsledkoch, ktoré sa dokonale zhodujú s vašimi cieľmi.</p>
 				</div>
-				<div class="it3-grid-item-txt t2">
+				<div class="it-grid-item-txt t2">
 					<h2 lang-code="02055">.Podpora a údržba</h2>
-					<div class="it3-grid-item-line"></div>
+					<div class="it-grid-item-line"></div>
 					<p lang-code="02056">.Získajte informácie o našej nepretržitej podpore a službách údržby, aby vaše systémy fungovali hladko. U nás sa môžete spoľahnúť na citlivú a proaktívnu
 						pomoc, vďaka ktorej bude vaša firma fungovať bez problémov.</p>
 				</div>
-				<div class="it3-grid-item-pic p2">
+				<div class="it-grid-item-pic p2">
 					<img src="media/BlokovyGrafVRuke.avif" alt="Obrázok P2" />
 				</div>
-				<div class="it3-grid-item-pic p3">
+				<div class="it-grid-item-pic p3">
 					<img src="media/FarebnyStosPapierov.avif" alt="Obrázok P3" />
 				</div>
-				<div class="it3-grid-item-txt t3">
+				<div class="it-grid-item-txt t3">
 					<h2 lang-code="02057">.Možnosti škálovania</h2>
-					<div class="it3-grid-item-line"></div>
+					<div class="it-grid-item-line"></div>
 					<p lang-code="02058">.Zistite, ako sa naše nearshoringové služby môžu prispôsobiť vášmu obchodnému rastu a poskytovať škálovateľné IT riešenia. Ak si vyberiete nás, robíte
 						strategickú investíciu do dlhodobého partnerstva, ktorá podporuje udržateľný rast a úspech.</p>
 				</div>
 			</div>
-			<div class="it3-more-info-container">
-				<a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline it5-animate-text-underline" lang-code="02059">Viac informácií</a>
+			<div class="it-more-info-container">
+				<a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" lang-code="02059" class="animate-text-underline" style="
+                --text-color: #BBEEFF;
+                --hover-color: white;
+                --underline-color: white;">
+					Viac informácií</a>
 			</div>
 		</div>
 	</div>
@@ -73,8 +77,8 @@
 			await loadAllTranslations();
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
-			Animator.registerAll(".it3-line", "animate-width-grow");
-			Animator.registerAll(".it3-grid-item-line", "animate-width-grow");
+			Animator.registerAll(".it-line", "animate-width-grow");
+			Animator.registerAll(".it-grid-item-line", "animate-width-grow");
 			document.body.style.visibility = "visible";
 		});
 	</script>
