--- a/indexIT.html
+++ b/indexIT.html
@@ -30,9 +30,9 @@
 	<link rel="stylesheet" href="UvodHero.css">
 	<link rel="stylesheet" href="it1.css">
 	<link rel="stylesheet" href="it2.css">
-	<link rel="stylesheet" href="it3.css">
-	<link rel="stylesheet" href="it4.css">
-	<link rel="stylesheet" href="it5.css">
+	<link rel="stylesheet" href="it.css">
+	<!-- <link rel="stylesheet" href="it4.css">
+	<link rel="stylesheet" href="it5.css"> -->
 	<link rel="stylesheet" href="footer.css">
 
 	<script src="Language.js" defer></script>
@@ -102,8 +102,8 @@
 			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".it1-line", "animate-width-grow");
 			Animator.registerAll(".it2-line", "animate-width-grow");
-			Animator.registerAll(".it3-line", "animate-width-grow");
-			Animator.registerAll(".it3-grid-item-line", "animate-width-grow"); // doprava rastuce ciary
+			Animator.registerAll(".it-line", "animate-width-grow");
+			Animator.registerAll(".it-grid-item-line", "animate-width-grow"); // doprava rastuce ciary
 			// Animator.registerAll(".footer-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
